# uv_sample_project

./: .env  dspy_demo.ipynb  main.py  pyproject.toml
helper/: check_df.py  plot_helper.py
