[project]
name = "uv-sample-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "black>=25.1.0",
    "dotenv>=0.9.9",
    "dspy>=2.6.27",
    "dspy-ai>=2.6.27",
    "ipykernel>=6.30.0",
    "isort>=6.0.1",
    "ollama>=0.5.1",
    "openai>=1.98.0",
    "pipeline>=0.1.0",
    "pplot>=1.1.4",
    "rich>=14.1.0",
    "seaborn>=0.13.2",
]
